[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
clap = { version = "3.1", features = ["derive"] }
rug = "1.15"
itertools = "0.10"
rayon = "1.5"
palette = "0.6"
